# module-98

./: .gitignore  CheckModules.lhs  Ents.hs  ModSysSem.lhs  Modules.lhs  Names.hs  NamesEntities.lhs  README  README.md  Set.hs  Test.hs  module98.cabal  shell.nix
src/: CheckModules.lhs  Ents.hs  ModSysAST.lhs  ModSysSem.lhs  Modules.lhs  NamesEntities.lhs  Relations.lhs
src/Types/: Ents.hs  ModSysAST.lhs  Names.hs
src/Util/: NamesEntities.lhs  Relations.lhs  Set.hs
